Add GitHub button iframe to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 </head>
 <body class="bg-gray-100">
 
+    <iframe src="https://ghbtns.com/github-btn.html?user=twbs&repo=bootstrap&type=watch&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
     <!-- Hero Section -->
     <section class="hero-bg py-20">
         <div class="container mx-auto text-center">
