--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
     <!-- Hero Section -->
     <section class="hero-bg py-20">
-        <iframe src="https://ghbtns.com/github-btn.html?user=Aarondoran&repo=Node-URL-shortener&type=watch&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=Aarondoran&repo=Node-URL-shortener&type=watch&count=false&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
         <div class="container mx-auto text-center">
             <h1 class="text-4xl font-bold mb-4">URL shortener</h1>
             <p class="text-lg mb-6">My cool URL shortener.</p>
