Add uptime badge to index.html
Added an uptime badge to display the demo uptime for the last 24 hours.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <body>
   <div class="container">
     <div class="badges">
+      <a href="uptime.aarondoran.me"><img alt="Endpoint Badge" src="https://img.shields.io/endpoint?url=https%3A%2F%2Fraw.githubusercontent.com%2FAarondoran%2Fuptime%2Frefs%2Fheads%2Fmaster%2Fapi%2Fnode-url-shortener%2Fuptime-day.json&label=demo-uptime%2024h"></a>
       <a href="https://github.com/Aarondoran/Node-URL-shortener/network"><img src="https://img.shields.io/github/forks/Aarondoran/Node-URL-shortener" alt="Forks"></a>
       <a href="https://github.com/Aarondoran/Node-URL-shortener/stargazers"><img src="https://img.shields.io/github/stars/Aarondoran/Node-URL-shortener" alt="Stars"></a>
       <a href="https://github.com/Aarondoran/Node-URL-shortener/releases"><img src="https://img.shields.io/github/v/release/Aarondoran/Node-URL-shortener" alt="Releases"></a>
